@@ -24,6 +24,9 @@ Core and Builtins
 
 - Issue #15839: Convert SystemErrors in `super()` to RuntimeErrors.
 
+- Issue #15448: Buffered IO now frees the buffer when closed, instead
+  of when deallocating.
+
 - Issue #15846: Fix SystemError which happened when using `ast.parse()` in an
   exception handler on code with syntax errors.
 
